# hanazonolite

./: .gitignore  .gitmodules  175-1f5542c15dfbb790bc0b.js  175-1f5542c15dfbb790bc0b.js.map  231-468b4fb0b9d8acf90788.js  231-468b4fb0b9d8acf90788.js.map  252f366e-15d799c654180ecea919.js  252f366e-15d799c654180ecea919.js.map  404.html  778-dbe13e2c77c7cd452b44.js  778-dbe13e2c77c7cd452b44.js.map  README.md  app-60446ee8c5b3fa7a5582.js  app-60446ee8c5b3fa7a5582.js.map  chunk-map.json  clean.sh  component---src-pages-404-js-a79e892f9f850b8d29d9.js  component---src-pages-404-js-a79e892f9f850b8d29d9.js.map  component---src-pages-index-js-3a170db718bac3ac9780.js  component---src-pages-index-js-3a170db718bac3ac9780.js.map  config.json  config_gothic.json  config_gothic_single.json  config_mincho.json  config_mincho_single.json  fetch_dump.sh  fetch_svg_font.sh  framework-d6c30ecbbd04e65ec2d4.js  framework-d6c30ecbbd04e65ec2d4.js.map  generate_pfa_dump.sh  index.html  manifest.webmanifest  polyfill-adbb46ab639e9a405248.js  polyfill-adbb46ab639e9a405248.js.map  pyproject.toml  sitemap.xml  styles.a9c9a139dc4ebd7b6fa1.css  webpack-runtime-5133d9c57cdbdcb4fb53.js  webpack-runtime-5133d9c57cdbdcb4fb53.js.map  webpack.stats.json
0565a5639ffaca5eb5e9dd823fc400ab/: block_allocation.csv
404/: index.html
hanaminmod_lite/: constants.py  driver.py  generateCmap.py  generateOTF.py  generatePFADump.py  generateRaw.py
hanazono_lite/: config.py  constants.py  driver.py  generateFeatures.py  generateOTF.py  generatePFADump.py  generateRaw.py
page-data/: app-data.json
(+8 files in other folders)
