[tool.poetry]
name = "hanaminmod-lite"
version = "0.1.0"
description = ""
authors = ["Bryan Kok <bryan.wyern1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
afdko = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
driver = "hanaminmod_lite.driver:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
